# 2024ss_m4_g1_b

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
doc/: 2024-06-01_0009_cppcheck_report.txt  M4_CICD.pptx  StatischeAnalyse_Zusatz2.md  checkers_report.txt
doc/01_Anforderungsanalyse/: MERMAID_DIAGRAM.MD  USUECASES.md
doc/02_StatischeAnalyse/: 2024-06-01_0005_cppcheck_report.txt  2024-06-01_0006_cppcheck_report.txt  Analyseergebnis_cppcheck.md  Protokoll_cppcheck.md
doc/03_Unittest/: Laborprotokoll_Unittest.md
doc/99_wichtigeInfos/: InstallGTest.md
doc/Aufgabe/: MERMAID_CLASS_DIAGRAM.MD  MERMAID_CONDITION_DIAGRAM.MD  MERMAID_SEQUENCE_DIAGRAM.MD  REQUIREMENTS.md  SOFTWAREDESIGN.MD  Traceability.md  USUECASES.md
doc/StatischeAnalyse/: cppcheck_report.txt
doc/TestCoverage/: protokoll_test_coverage.md
doc/Unittest/: LPr_Protokoll_Unittest.md
doc/html/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html
html/: index.html
html/reversi/: GameManager.cpp.func-c.html  GameManager.cpp.func.html  Menu.cpp.func.html  Player.cpp.gcov.html  index-sort-b.html  index-sort-l.html  main.cpp.func-c.html
output/: main  runTests
reversi_fertig/main.cpp/: 12.txt  Board.cpp  Board.h  Menu.cpp  Player.h  e.txt  jjhhgg.txt  main.cpp.sln  max.txt  u.txt  (+2 more)
src/: README.md  makefile  test_datei.c
src/reversi/: 2024-05-31_234740_cppcheck_report.txt  2024-06-03_cppcheck_report.txt  Board.cpp  Board.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Makefile  Menu.cpp  Menu.h  Player.cpp  Player.h  game.cpp  game.h  lizard_report.txt  main  main.cpp  main.h
(+56 files in other folders)
